go/examples/knative-eventing-source/deploy/split-traffic/route.yaml
apiVersion: networking.istio.io/v1alpha3
kind: ServiceEntry
metadata:
  name: rgwpubsub-source
spec:
  hosts:
  - "<rgw host>"
  - "<TF serving host>"  
  - "vision.googleapis.com"
  ports:
  - number: 80 #rgw pubsub port
    name: http
    protocol: HTTP
  - number: 8080 #rgw port
    name: rgw
    protocol: HTTP
  - number: 443 # https
    name: https
    protocol: HTTPS
  - number: 8500 #resnet port
    name: resnet
    protocol: TCP
  location: MESH_EXTERNAL
---
apiVersion: serving.knative.dev/v1alpha1
kind: Route
metadata:
  name: rgwpubsub-route
spec:
 traffic:
 - configurationName: google-vision-configuration
   percent: 50
 - configurationName: resnet-configuration
   percent: 50
